src/test/ui/parser/attrs-after-extern-mod.stderr
error: expected item after attributes
  --> $DIR/attrs-after-extern-mod.rs:6:5
   |
LL |     #[cfg(stage37)]
   |     ^^^^^^^^^^^^^^^

error: aborting due to previous error

